# ml-template

./: .gitignore  LICENSE  README.md  environment.yml  eval.py  pyproject.toml  requirements.txt  train.py
configs/: config.yaml
configs/data/: template.yaml
configs/hydra/launcher/: local.yaml  slurm.yaml
configs/model/: template.yaml
data/: __init__.py
data/template/: __init__.py  datamodule.py
models/: __init__.py  template_model.py
models/networks/: __init__.py  template_network.py
utils/: callbacks.py  evaluations.py  helpers.py  results.py  run.py
